Fix overflow sizing

--- a/src/index.scss
+++ b/src/index.scss
@@ -25,10 +25,6 @@ body {
   border-bottom: 1px solid $grey-darker;
 }
 
-.content-area {
-  height: 100%;
-}
-
 /* NavBar styles */
 
 .button,
